noinst_HEADERS = include/private/adapter.h \
                 include/private/adapter_base.h \
                 include/private/adapter_initializer.h \
                 include/private/boolean.h \
                 include/private/comparator.h \
                 include/private/comparator_base.h \
                 include/private/comparator_initializer.h \
                 include/private/configuration.h \
                 include/private/dictionary.h \
                 include/private/entry.h \
                 include/private/entry_attribute.h \
                 include/private/event.h \
                 include/private/event_attribute.h \
                 include/private/filter.h \
                 include/private/filter_initializer.h \
                 include/private/formatter.h \
                 include/private/handler.h \
                 include/private/level.h \
                 include/private/list.h \
                 include/private/logger.h \
                 include/private/output.h \
                 include/private/output_profile.h \
                 include/private/output_profile_initializer.h \
                 include/private/stack.h \
                 include/private/status_checker.h \
                 include/private/status.h \
                 include/private/status_initializer.h \
                 include/private/string_helper.h \
                 include/private/tree.h \
                 include/private/type.h \
                 include/private/value_constructor.h \
                 include/private/value.h \
                 include/private/value_profile.h \
                 include/private/value_profile_initializer.h

include include/private/formatter/Makefile.am
include include/private/handler/Makefile.am
include include/private/list/Makefile.am
