noinst_HEADERS = include/private/adapter.h \
                 include/private/boolean.h \
                 include/private/comparator.h \
                 include/private/configuration.h \
                 include/private/event_attribute.h \
                 include/private/filter.h \
                 include/private/formatter.h \
                 include/private/handler.h \
                 include/private/level.h \
                 include/private/output.h \
                 include/private/status.h \
                 include/private/string_helper.h \
                 include/private/target.h \
                 include/private/type.h \
                 include/private/value.h

include include/private/adapter/Makefile.am
include include/private/comparator/Makefile.am
include include/private/container/Makefile.am
include include/private/event/Makefile.am
include include/private/filter/Makefile.am
include include/private/formatter/Makefile.am
include include/private/handler/Makefile.am
include include/private/level/Makefile.am
include include/private/logger/Makefile.am
include include/private/output/Makefile.am
include include/private/status/Makefile.am
include include/private/value/Makefile.am
