stumpless_includedir = $(includedir)/stumpless

stumpless_include_HEADERS = include/stumpless/adapter.h \
                            include/stumpless/boolean.h \
                            include/stumpless/config.h \
                            include/stumpless/configuration.h \
                            include/stumpless/csv_formatter.h \
                            include/stumpless/dictionary.h \
                            include/stumpless/entry.h \
                            include/stumpless/event.h \
                            include/stumpless/filter.h \
                            include/stumpless/formatter.h \
                            include/stumpless/handler.h \
                            include/stumpless/level.h \
                            include/stumpless/logger.h \
                            include/stumpless/output.h \
                            include/stumpless/output_profile.h \
                            include/stumpless/status.h \
                            include/stumpless/stream_handler.h \
                            include/stumpless/text_formatter.h \
                            include/stumpless/type.h \
                            include/stumpless/value.h \
                            include/stumpless/value_constructor.h \
                            include/stumpless/value_profile.h

include include/stumpless/list/Makefile.am
include include/stumpless/type/Makefile.am
