stumpless_includedir = $(includedir)/stumpless

stumpless_include_HEADERS = include/stumpless/event.h \
                            include/stumpless/exception.h \
                            include/stumpless/logger.h \
                            include/stumpless/record.h \
                            include/stumpless/record_attribute.h \
                            include/stumpless/target.h \
                            include/stumpless/type.h \
                            include/stumpless/value.h

include include/stumpless/config/Makefile.am
include include/stumpless/formatter/Makefile.am
include include/stumpless/logger/Makefile.am
include include/stumpless/type/Makefile.am
include include/stumpless/value/Makefile.am
