libstumpless_la_SOURCES += src/container/dictionary.c \
                           src/container/list.c \
                           src/container/queue.c \
                           src/container/stack.c \
                           src/container/tree.c

include src/container/dictionary/Makefile.am
include src/container/list/Makefile.am
