libstumpless_la_SOURCES += src/list/adapter_list.c \
                           src/list/comparator_list.c \
                           src/list/entry_attribute_list.c \
                           src/list/event_attribute_list.c \
                           src/list/filter_list.c \
                           src/list/formatter_list.c \
                           src/list/handler_list.c \
                           src/list/iterator.c \
                           src/list/list.c \
                           src/list/value_list.c
