libstumpless_la_SOURCES += src/list/adapter.c \
                           src/list/comparator.c \
                           src/list/const_iterator.c \
                           src/list/const_reverse_iterator.c \
                           src/list/entry_attribute.c \
                           src/list/event_attribute.c \
                           src/list/filter.c \
                           src/list/formatter.c \
                           src/list/handler.c \
                           src/list/iterator.c \
                           src/list/reverse_iterator.c \
                           src/list/value.c

include src/list/const_iterator/Makefile.am
include src/list/const_reverse_iterator/Makefile.am
include src/list/iterator/Makefile.am
include src/list/reverse_iterator/Makefile.am
