if !PRIVATE_NAMESPACE
libstumpless_la_SOURCES += src/wrapper/boolean.c \
                           src/wrapper/configuration.c \
                           src/wrapper/entry.c \
                           src/wrapper/event.c \
                           src/wrapper/filter.c \
                           src/wrapper/filter_list.c \
                           src/wrapper/handler.c \
                           src/wrapper/handler_list.c \
                           src/wrapper/level.c \
                           src/wrapper/logger.c \
                           src/wrapper/output.c \
                           src/wrapper/output_profile.c \
                           src/wrapper/status.c \
                           src/wrapper/stream_handler.c \
                           src/wrapper/text_formatter.c \
                           src/wrapper/value.c \
                           src/wrapper/value_constructor.c \
                           src/wrapper/value_list.c \
                           src/wrapper/value_profile.c
endif
