test_function_adapter_suite_SOURCES = test/function/adapter_suite.c
test_function_adapter_suite_LDADD = $(test_libraries)

test_function_boolean_suite_SOURCES = test/function/boolean_suite.c
test_function_boolean_suite_LDADD = $(test_libraries)

test_function_configuration_suite_SOURCES = test/function/configuration_suite.c
test_function_configuration_suite_LDADD = $(test_libraries)

test_function_event_SOURCES = test/function/event.c
test_function_event_LDADD = $(test_libraries)

test_function_level_SOURCES = test/function/level.c
test_function_level_LDADD = $(test_libraries)

test_function_record_SOURCES = test/function/record.c
test_function_record_LDADD = $(test_libraries)

test_function_record_attribute_SOURCES = test/function/record_attribute.c
test_function_record_attribute_LDADD = $(test_libraries)

test_function_string_helper_SOURCES = test/function/string_helper.c
test_function_string_helper_LDADD = $(test_libraries)

test_function_target_SOURCES = test/function/target.c
test_function_target_LDADD = $(test_libraries)

include test/function/comparator/Makefile.am
include test/function/container/Makefile.am
include test/function/filter/Makefile.am
include test/function/formatter/Makefile.am
include test/function/handler/Makefile.am
include test/function/logger/Makefile.am
include test/function/output/Makefile.am
include test/function/status/Makefile.am
include test/function/value/Makefile.am
