test_function_adapter_suite_SOURCES = test/function/adapter_suite.c
test_function_adapter_suite_LDADD = $(test_libraries)

test_function_boolean_suite_SOURCES = test/function/boolean_suite.c
test_function_boolean_suite_LDADD = $(test_libraries)

test_function_comparator_suite_SOURCES = test/function/comparator_suite.c
test_function_comparator_suite_LDADD = $(test_libraries)

test_function_configuration_suite_SOURCES = test/function/configuration_suite.c
test_function_configuration_suite_LDADD = $(test_libraries)

test_function_event_suite_SOURCES = test/function/event_suite.c
test_function_event_suite_LDADD = $(test_libraries)

test_function_filter_suite_SOURCES = test/function/filter_suite.c
test_function_filter_suite_LDADD = $(test_libraries)

test_function_formatter_suite_SOURCES = test/function/formatter_suite.c
test_function_formatter_suite_LDADD = $(test_libraries)

test_function_handler_suite_SOURCES = test/function/handler_suite.c
test_function_handler_suite_LDADD = $(test_libraries)

test_function_level_suite_SOURCES = test/function/level_suite.c
test_function_level_suite_LDADD = $(test_libraries)

test_function_logger_suite_SOURCES = test/function/logger_suite.c
test_function_logger_suite_LDADD = $(test_libraries)

test_function_output_suite_SOURCES = test/function/output_suite.c
test_function_output_suite_LDADD = $(test_libraries)

test_function_record_suite_SOURCES = test/function/record_suite.c
test_function_record_suite_LDADD = $(test_libraries)

test_function_record_attribute_suite_SOURCES = test/function/record_attribute_suite.c
test_function_record_attribute_suite_LDADD = $(test_libraries)

test_function_status_suite_SOURCES = test/function/status_suite.c
test_function_status_suite_LDADD = $(test_libraries)

test_function_string_helper_suite_SOURCES = test/function/string_helper_suite.c
test_function_string_helper_suite_LDADD = $(test_libraries)

test_function_target_suite_SOURCES = test/function/target_suite.c
test_function_target_suite_LDADD = $(test_libraries)

test_function_value_suite_SOURCES = test/function/value_suite.c
test_function_value_suite_LDADD = $(test_libraries)

include test/function/comparator/Makefile.am
include test/function/container/Makefile.am
include test/function/filter/Makefile.am
include test/function/formatter/Makefile.am
include test/function/handler/Makefile.am
include test/function/logger/Makefile.am
include test/function/output/Makefile.am
include test/function/status/Makefile.am
include test/function/value/Makefile.am
