noinst_HEADERS += include/private/container/dictionary.h \
                  include/private/container/list.h \
                  include/private/container/queue.h \
                  include/private/container/stack.h \
                  include/private/container/tree.h

include include/private/container/dictionary/Makefile.am
include include/private/container/list/Makefile.am
