noinst_HEADERS += include/private/list/adapter_list.h \
                  include/private/list/comparator_list.h \
                  include/private/list/entry_attribute_list.h \
                  include/private/list/event_attribute_list.h \
                  include/private/list/filter_list.h \
                  include/private/list/formatter_list.h \
                  include/private/list/handler_list.h \
                  include/private/list/list.h \
                  include/private/list/iterator.h \
                  include/private/list/value_list.h
