noinst_HEADERS += include/private/list/adapter.h \
                  include/private/list/comparator.h \
                  include/private/list/const_iterator.h \
                  include/private/list/const_reverse_iterator.h \
                  include/private/list/entry_attribute.h \
                  include/private/list/event_attribute.h \
                  include/private/list/filter.h \
                  include/private/list/formatter.h \
                  include/private/list/handler.h \
                  include/private/list/inheritance.h \
                  include/private/list/iterator.h \
                  include/private/list/reverse_iterator.h \
                  include/private/list/value.h

include include/private/list/const_iterator/Makefile.am
include include/private/list/const_reverse_iterator/Makefile.am
include include/private/list/iterator/Makefile.am
include include/private/list/reverse_iterator/Makefile.am
