noinst_HEADERS += include/private/static/adapter_list.h \
                  include/private/static/comparator_list.h \
                  include/private/static/dictionary.h \
                  include/private/static/entry_attribute_list.h \
                  include/private/static/event_attribute_list.h \
                  include/private/static/filter_list.h \
                  include/private/static/formatter_list.h \
                  include/private/static/handler_list.h \
                  include/private/static/list.h \
                  include/private/static/stack.h \
                  include/private/static/text_formatter.h \
                  include/private/static/tree.h \
                  include/private/static/value_list.h
