noinst_HEADERS += include/static/container/dictionary.h \
                  include/static/container/list.h \
                  include/static/container/queue.h \
                  include/static/container/stack.h \
                  include/static/container/tree.h

include include/static/container/dictionary/Makefile.am
include include/static/container/list/Makefile.am
