noinst_HEADERS += include/static/list/adapter.h \
                  include/static/list/comparator.h \
                  include/static/list/const_iterator.h \
                  include/static/list/const_reverse_iterator.h \
                  include/static/list/entry_attribute.h \
                  include/static/list/event_attribute.h \
                  include/static/list/filter.h \
                  include/static/list/formatter.h \
                  include/static/list/handler.h \
                  include/static/list/iterator.h \
                  include/static/list/reverse_iterator.h \
                  include/static/list/value.h

include include/static/list/const_iterator/Makefile.am
include include/static/list/const_reverse_iterator/Makefile.am
include include/static/list/iterator/Makefile.am
include include/static/list/reverse_iterator/Makefile.am
