stumpless_include_HEADERS += include/stumpless/list/adapter_list.h \
                             include/stumpless/list/entry_attribute_list.h \
                             include/stumpless/list/event_attribute_list.h \
                             include/stumpless/list/filter_list.h \
                             include/stumpless/list/formatter_list.h \
                             include/stumpless/list/handler_list.h \
                             include/stumpless/list/value_list.h
