stumpless_include_HEADERS += include/stumpless/list/adapter.h \
                             include/stumpless/list/entry_attribute.h \
                             include/stumpless/list/event_attribute.h \
                             include/stumpless/list/filter.h \
                             include/stumpless/list/formatter.h \
                             include/stumpless/list/handler.h \
                             include/stumpless/list/value.h

include include/stumpless/list/iterator/Makefile.am
