noinst_HEADERS += include/test/function/adapter.h \
                  include/test/function/event.h \
                  include/test/function/level.h \
                  include/test/function/output.h \
                  include/test/function/record.h

include include/test/function/container/Makefile.am
include include/test/function/formatter/Makefile.am