noinst_HEADERS += include/test/function/adapter_suite.h \
                  include/test/function/event_suite.h \
                  include/test/function/level_suite.h \
                  include/test/function/output_suite.h \
                  include/test/function/record_suite.h \
                  include/test/function/target_suite.h

include include/test/function/container/Makefile.am
include include/test/function/formatter/Makefile.am
include include/test/function/value/Makefile.am