libstumpless_la_SOURCES += src/container/list/adapter.c \
                           src/container/list/comparator.c \
                           src/container/list/const_iterator.c \
                           src/container/list/const_reverse_iterator.c \
                           src/container/list/event_attribute.c \
                           src/container/list/filter.c \
                           src/container/list/formatter.c \
                           src/container/list/handler.c \
                           src/container/list/iterator.c \
                           src/container/list/record_attribute.c \
                           src/container/list/reverse_iterator.c \
                           src/container/list/target.c \
                           src/container/list/value.c

include src/container/list/const_iterator/Makefile.am
include src/container/list/const_reverse_iterator/Makefile.am
include src/container/list/iterator/Makefile.am
include src/container/list/reverse_iterator/Makefile.am
