libstumpless_la_SOURCES += src/list/const_iterator/adapter.c \
                           src/list/const_iterator/comparator.c \
                           src/list/const_iterator/entry_attribute.c \
                           src/list/const_iterator/event_attribute.c \
                           src/list/const_iterator/filter.c \
                           src/list/const_iterator/formatter.c \
                           src/list/const_iterator/handler.c \
                           src/list/const_iterator/value.c
