libstumpless_la_SOURCES += src/list/const_reverse_iterator/adapter.c \
                           src/list/const_reverse_iterator/comparator.c \
                           src/list/const_reverse_iterator/entry_attribute.c \
                           src/list/const_reverse_iterator/event_attribute.c \
                           src/list/const_reverse_iterator/filter.c \
                           src/list/const_reverse_iterator/formatter.c \
                           src/list/const_reverse_iterator/handler.c \
                           src/list/const_reverse_iterator/value.c
