libstumpless_la_SOURCES += src/list/iterator/adapter.c \
                           src/list/iterator/comparator.c \
                           src/list/iterator/entry_attribute.c \
                           src/list/iterator/event_attribute.c \
                           src/list/iterator/filter.c \
                           src/list/iterator/formatter.c \
                           src/list/iterator/handler.c \
                           src/list/iterator/value.c
