libstumpless_la_SOURCES += src/list/reverse_iterator/adapter.c \
                           src/list/reverse_iterator/comparator.c \
                           src/list/reverse_iterator/entry_attribute.c \
                           src/list/reverse_iterator/event_attribute.c \
                           src/list/reverse_iterator/filter.c \
                           src/list/reverse_iterator/formatter.c \
                           src/list/reverse_iterator/handler.c \
                           src/list/reverse_iterator/value.c
