if !PRIVATE_NAMESPACE
libstumpless_la_SOURCES += src/wrapper/list/adapter.c \
                           src/wrapper/list/comparator.c \
                           src/wrapper/list/entry_attribute.c \
                           src/wrapper/list/event_attribute.c \
                           src/wrapper/list/filter.c \
                           src/wrapper/list/formatter.c \
                           src/wrapper/list/handler.c \
                           src/wrapper/list/value.c
endif

include src/wrapper/list/iterator/Makefile.am
