test_function_container_dictionary_SOURCES = test/function/container/dictionary.c
test_function_container_dictionary_CFLAGS = $(test_flags)
test_function_container_dictionary_LDADD = $(test_libraries)

test_function_container_stack_SOURCES = test/function/container/stack.c
test_function_container_stack_CFLAGS = $(test_flags)
test_function_container_stack_LDADD = $(test_libraries)

test_function_container_tree_SOURCES = test/function/container/tree.c
test_function_container_tree_CFLAGS = $(test_flags)
test_function_container_tree_LDADD = $(test_libraries)

include test/function/container/list/Makefile.am
