test_function_container_stack_SOURCES = test/function/container/stack.c
test_function_container_stack_LDADD = $(test_libraries)

test_function_container_tree_SOURCES = test/function/container/tree.c
test_function_container_tree_LDADD = $(test_libraries)

include test/function/container/dictionary/Makefile.am
include test/function/container/list/Makefile.am
