test_function_container_dictionary_suite_SOURCES = test/function/container/dictionary_suite.c
test_function_container_dictionary_suite_LDADD = $(test_libraries)

test_function_container_list_suite_SOURCES = test/function/container/list_suite.c
test_function_container_list_suite_LDADD = $(test_libraries)

test_function_container_queue_suite_SOURCES = test/function/container/queue_suite.c
test_function_container_queue_suite_LDADD = $(test_libraries)

test_function_container_stack_suite_SOURCES = test/function/container/stack_suite.c
test_function_container_stack_suite_LDADD = $(test_libraries)

test_function_container_tree_suite_SOURCES = test/function/container/tree_suite.c
test_function_container_tree_suite_LDADD = $(test_libraries)

include test/function/container/dictionary/Makefile.am
include test/function/container/list/Makefile.am
