test_function_exception_handler_suite_SOURCES = test/function/exception/handler_suite.c
test_function_exception_handler_suite_LDADD = $(test_libraries)

test_function_exception_initializer_suite_SOURCES = test/function/exception/initializer_suite.c
test_function_exception_initializer_suite_LDADD = $(test_libraries)

test_function_exception_thrower_suite_SOURCES = test/function/exception/thrower_suite.c
test_function_exception_thrower_suite_LDADD = $(test_libraries)