test_function_formatter_formatter_SOURCES = test/function/formatter/formatter.c
test_function_formatter_formatter_CFLAGS = $(test_flags)
test_function_formatter_formatter_LDADD = $(test_libraries)

test_function_formatter_text_SOURCES = test/function/formatter/text.c
test_function_formatter_text_CFLAGS = $(test_flags)
test_function_formatter_text_LDADD = $(test_libraries)
