test_function_handler_handler_SOURCES = test/function/handler/handler.c
test_function_handler_handler_CFLAGS = $(test_flags)
test_function_handler_handler_LDADD = $(test_libraries)

test_function_handler_stream_SOURCES = test/function/handler/stream.c
test_function_handler_stream_CFLAGS = $(test_flags)
test_function_handler_stream_LDADD = $(test_libraries)
