test_function_handler_main_SOURCES = test/function/handler/main.c
test_function_handler_main_CFLAGS = $(test_flags)
test_function_handler_main_LDADD = $(test_libraries)

test_function_handler_stream_SOURCES = test/function/handler/stream.c
test_function_handler_stream_CFLAGS = $(test_flags)
test_function_handler_stream_LDADD = $(test_libraries)
